--- a/blackgoose/styles.css
+++ b/blackgoose/styles.css
@@ -25,4 +25,4 @@ nav ul{
 
 footer{ border-top:1px solid #57b1dc; text-align: center; padding-top: 1em;}
 
-footer img {width 40px; height:40px; margin-left: .5em; margin-right: .5em;}
+footer img {width: 40px; height:40px; margin-left: .5em; margin-right: .5em;}
